--- a/contact.html
+++ b/contact.html
@@ -1,268 +1,188 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="./assets/img/user-id-icon_34334.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="./assets/img/user-id-icon_34334.ico"
-    />
-    <link
-      rel="stylesheet"
-      href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" 
-    integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
-    />
-    <title>Joshua Morgan | Contact</title>
-  </head>
-  <body class="text-gray-800 antialiased">
-    <!--Nav Bar-->
-    <nav
-      class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg"
-    >
-    <div
-        class="container px-4 mx-auto flex flex-wrap items-center justify-between"
-      >
-      <div
-      class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start"
-    >
-      <a
-        class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white"
-        href="index.html" 
-        >Home</a
-      >
-      <a
-        class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white"
-        href="projects.html"
-        >Projects</a
-      >
-      <a
-        class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white"
-        href="Qualifications.html"
-        >Qualifications</a
-      >
-      <button
-        class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
-        type="button"
-        onclick="toggleNavbar('example-collapse-navbar')"
-      >
-        <i class="text-white fas fa-bars"></i>
-      </button>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="shortcut icon" href="./assets/img/user-id-icon_34334.ico" />
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/user-id-icon_34334.ico" />
+  <link rel="stylesheet" href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
+  <title>Joshua Morgan | Contact</title>
+</head>
+
+<body class="text-gray-800 antialiased">
+  <!--Nav Bar-->
+  <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg">
+    <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
+      <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
+        <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white"
+          href="index.html">Home</a>
+        <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white"
+          href="projects.html">Projects</a>
+        <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white"
+          href="Qualifications.html">Qualifications</a>
+        <button
+          class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
+          type="button" onclick="toggleNavbar('example-collapse-navbar')">
+          <i class="text-white fas fa-bars"></i>
+        </button>
       </div>
-  
-  <div
-    class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden"
-    id="example-collapse-navbar"
-  >
+
+      <div class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden"
+        id="example-collapse-navbar">
         <!--Icon 1-->
-          <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
-            
-            <li class="flex items-center">
-              <a
-                class="lg:text-white text-black px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://github.com/Jmorgan108" target="_blank"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Github Profile</span></a
-              >
-            </li>
-            <!--Icon 2-->
-            <li class="flex items-center">
-              <a
-                class="lg:text-white text-black px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://www.instagram.com/joshreubmorgan/" target="_blank"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-instagram text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Instagram</span></a
-              >
-            </li>
-            <!--Icon 3-->
-            <li class="flex items-center">
-              <a
-                class="lg:text-white text-black px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://www.linkedin.com/in/joshuarmorgan008/" target="_blank"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-linkedin text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Linkedin Profile</span></a
-              >
-            </li>
-          </ul>
-        </div>
+        <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+
+          <li class="flex items-center">
+            <a class="lg:text-white text-black px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+              href="https://github.com/Jmorgan108" target="_blank"><i
+                class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "></i><span
+                class="lg:hidden inline-block ml-2">Github Profile</span></a>
+          </li>
+          <!--Icon 2-->
+          <li class="flex items-center">
+            <a class="lg:text-white text-black px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+              href="https://www.instagram.com/joshreubmorgan/" target="_blank"><i
+                class="lg:text-gray-300 text-gray-500 fab fa-instagram text-lg leading-lg "></i><span
+                class="lg:hidden inline-block ml-2">Instagram</span></a>
+          </li>
+          <!--Icon 3-->
+          <li class="flex items-center">
+            <a class="lg:text-white text-black px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+              href="https://www.linkedin.com/in/joshuarmorgan008/" target="_blank"><i
+                class="lg:text-gray-300 text-gray-500 fab fa-linkedin text-lg leading-lg "></i><span
+                class="lg:hidden inline-block ml-2">Linkedin Profile</span></a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- Main Area -->
-    <main>
-      <!-- Contact Section Header-->
-      <section class="pb-20 relative block bg-black text-white">
-        <div
-          class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
-          style="height: 80px; transform: translateZ(0px);"
-        >
-          <svg
-            class="absolute bottom-0 overflow-hidden"
-            xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="none"
-            version="1.1"
-            viewBox="0 0 2560 100"
-            x="0"
-            y="0"
-          >
-            <polygon
-              points="2560 0 2560 100 0 100"
-            ></polygon>
-          </svg>
-        </div>
-        <div class="container mx-auto px-4 lg:pt-24 lg:pb-64 pb-20 pt-20">
-          <div class="flex flex-wrap text-center justify-center">
-            <div class="w-full lg:w-6/12 px-4">
-              <h2 class="text-4xl font-semibold text-white uppercase">Contact Me</h2>
-              <p class="text-lg leading-relaxed mt-4 mb-4">
-                Contact me to ask any questions, or talk to me about any available opportunities. 
-                The fastest way to do this would be through LinkedIn or Email as these are checked regularly.
-              </p>
-            </div>
+    </div>
+  </nav>
+  <!-- Main Area -->
+  <main>
+    <!-- Contact Section Header-->
+    <section class="pb-20 relative block bg-black text-white">
+      <div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
+        style="height: 80px; transform: translateZ(0px);">
+        <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
+          version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+          <polygon points="2560 0 2560 100 0 100"></polygon>
+        </svg>
+      </div>
+      <div class="container mx-auto px-4 lg:pt-24 lg:pb-64 pb-20 pt-20">
+        <div class="flex flex-wrap text-center justify-center">
+          <div class="w-full lg:w-6/12 px-4">
+            <h2 class="text-4xl font-semibold text-white uppercase">Contact Me</h2>
+            <p class="text-lg leading-relaxed mt-4 mb-4">
+              Contact me to ask any questions, or talk to me about any available opportunities.
+              The fastest way to do this would be through LinkedIn or Email as these are checked regularly.
+            </p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- Contact form -->
-      <section class="relative block py-24 lg:pt-0 bg-black">
-        <div class="container mx-auto px-4">
-          <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
-            <div class="w-full lg:w-6/12 px-4">
-              <div
-                class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300" data-aos="fade-up"
-              >
-                <div class="flex-auto p-5 lg:p-10 bg-white text-Black">
-                  <h4 class="text-2xl font-semibold">Personal contact details</h4>
-                  <p class="leading-relaxed mt-1 mb-4">
-                    For professional use only.
-                  </p>
-                  <div class="relative w-full mb-3 mt-8">
-                    <label
-                      class="block uppercase text-xs font-bold mb-2"
-                      >Full Name</label>
-                      <p>Joshua Morgan</p>
-                  </div>
-                  <div class="relative w-full mb-3">
-                    <label
-                      class="block uppercase  text-xs font-bold mb-2"
-                      >Email</label>
-                      <p>JoshuaReubenMorgan@gmail.com</p>
-                  </div>
-                  <div class="relative w-full mb-3">
-                    <label
-                      class="block uppercase text-xs font-bold mb-2"
-                      >Phone Number</label>
-                      <p>Available on request</p>
-                  </div>
+    <!-- Contact form -->
+    <section class="relative block py-24 lg:pt-0 bg-black">
+      <div class="container mx-auto px-4">
+        <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
+          <div class="w-full lg:w-6/12 px-4">
+            <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300"
+              data-aos="fade-up">
+              <div class="flex-auto p-5 lg:p-10 bg-white text-Black">
+                <h4 class="text-2xl font-semibold">Personal contact details</h4>
+                <p class="leading-relaxed mt-1 mb-4">
+                  For professional use only.
+                </p>
+                <div class="relative w-full mb-3 mt-8">
+                  <label class="block uppercase text-xs font-bold mb-2">Full Name</label>
+                  <p>Joshua Morgan</p>
+                </div>
+                <div class="relative w-full mb-3">
+                  <label class="block uppercase  text-xs font-bold mb-2">Email</label>
+                  <p>JoshuaReubenMorgan@gmail.com</p>
+                </div>
+                <div class="relative w-full mb-3">
+                  <label class="block uppercase text-xs font-bold mb-2">Phone Number</label>
+                  <p>Available on request</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 
-    <!-- Footer -->
-    <footer class="relative bg-gray-300 pt-8 pb-6">
-        <div
-          class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
-          style="height: 80px; transform: translateZ(0px);"
-        >
-          <svg
-            class="absolute bottom-0 overflow-hidden"
-            xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="none"
-            version="1.1"
-            viewBox="0 0 2560 100"
-            x="0"
-            y="0"
-          >
-            <polygon
-              class="text-gray-300 fill-current"
-              points="2560 0 2560 100 0 100"
-            ></polygon>
-          </svg>
-        </div>
-        <div class="container mx-auto px-4">
-          <div class="flex flex-wrap">
-            <div class="w-full lg:w-6/12 px-4">
-              <h4 class="text-3xl font-semibold">Please feel free to contact me!</h4>
-              <h5 class="text-lg mt-0 mb-2 text-gray-700">
-                Find me on any of these platforms, I respond within 24 hours.
-              </h5>
-              <div class="mt-6">
-                <a
-                  href="https://github.com/Jmorgan108" target="_blank"
-                >
-                <button
-                  class="bg-white text-black shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-                  type="button"
-                >
-                  <i class="flex fab fa-github"></i></button
-                >
-                </a>
-                <a
-                  href="https://www.instagram.com/joshreubmorgan/" target="_blank"
-                >
-                <button
-                  class="bg-white text-pink-500 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-                  type="button"
-                  
-                >
-                  <i class="flex fab fa-instagram"></i></button
-                >
-              </a>
-              <a
-                  href="https://www.linkedin.com/in/joshuarmorgan008/" target="_blank"
-                >
+  <!-- Footer -->
+  <footer class="relative bg-gray-300 pt-8 pb-6">
+    <div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
+      style="height: 80px; transform: translateZ(0px);">
+      <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
+        version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+        <polygon class="text-gray-300 fill-current" points="2560 0 2560 100 0 100"></polygon>
+      </svg>
+    </div>
+    <div class="container mx-auto px-4">
+      <div class="flex flex-wrap">
+        <div class="w-full lg:w-6/12 px-4">
+          <h4 class="text-3xl font-semibold">Please feel free to contact me!</h4>
+          <h5 class="text-lg mt-0 mb-2 text-gray-700">
+            Find me on any of these platforms, I respond within 24 hours.
+          </h5>
+          <div class="mt-6">
+            <a href="https://github.com/Jmorgan108" target="_blank">
               <button
-                  class="bg-white text-blue-700 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-                  type="button"
-                >
-                  <i class="flex fab fa-linkedin"></i>
-                </button>
-              </a>
-              </div>
-            </div>
-          </div>
-          <hr class="my-6 border-gray-400" />
-          <div
-            class="flex flex-wrap items-center md:justify-between justify-center"
-          >
-            <div class="w-full md:w-4/12 px-4 mx-auto text-center">
-              <div class="text-sm text-gray-600 font-semibold py-1">
-                Copyright © 2020 Joshua Morgan
-  
-              </div>
-            </div>
+                class="bg-white text-black shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
+                type="button">
+                <i class="flex fab fa-github"></i></button>
+            </a>
+            <a href="https://www.instagram.com/joshreubmorgan/" target="_blank">
+              <button
+                class="bg-white text-pink-500 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
+                type="button">
+                <i class="flex fab fa-instagram"></i></button>
+            </a>
+            <a href="https://www.linkedin.com/in/joshuarmorgan008/" target="_blank">
+              <button
+                class="bg-white text-blue-700 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
+                type="button">
+                <i class="flex fab fa-linkedin"></i>
+              </button>
+            </a>
           </div>
         </div>
-      </footer>
-  </body>
-  <script>
-    function toggleNavbar(collapseID) {
-      document.getElementById(collapseID).classList.toggle("hidden");
-      document.getElementById(collapseID).classList.toggle("block");
-    }
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" 
-  integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous"></script>
-  <script>AOS.init({
+      </div>
+      <hr class="my-6 border-gray-400" />
+      <div class="flex flex-wrap items-center md:justify-between justify-center">
+        <div class="w-full md:w-4/12 px-4 mx-auto text-center">
+          <div class="text-sm text-gray-600 font-semibold py-1">
+            Copyright © 2020 Joshua Morgan
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+<script>
+  function toggleNavbar(collapseID) {
+    document.getElementById(collapseID).classList.toggle("hidden");
+    document.getElementById(collapseID).classList.toggle("block");
+  }
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+  integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+  crossorigin="anonymous"></script>
+<script>AOS.init({
     delay: 100,
     duration: 1200,
     once: false,
   })</script>
+
 </html>
