--- a/Qualifications.html
+++ b/Qualifications.html
@@ -76,7 +76,7 @@
         </svg>
       </div>
     </section>
-    <!-- My and Quals-->
+    <!-- My Experience and Qualifications-->
     <section class="align-centre py-16 bg-gray-300">
       <div class="container mx-auto px-4">
         <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
