--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <h1 class="text-white font-semibold text-5xl">
                 Joshua Morgan | <span class='text-blue-500'>C# .NET Developer</span>
               </h1>
-              <a href="./assets/Joshua_MorganCV.docx" target="_blank"
+              <a href="./assets/Joshua_MorganCV.pdf" target="_blank"
                 class="bg-transparent hover:bg-blue-500 text-white font-semibold hover:text-white p-4 border border-blue-500 hover:border-transparent rounded inline-block mt-5 cursor-pointer">Download
                 CV</a>
             </div>
