--- a/Qualifications.html
+++ b/Qualifications.html
@@ -100,41 +100,7 @@
                 <i class="fas fa-university mr-2 text-xl text-black"></i>Attended the University of South Wales
               </div>
             </div>
-            <div class="mt-10 py-10 border-t border-gray-300 text-center">
-              <h3 class="text-3xl font-semibold leading-normal mb-2 text-gray-800 mb-2">
-                Qualifications
-              </h3>
-              <div class="flex flex-wrap justify-center">
-                <div class="w-full lg:w-9/12 px-4">
-                  <p class="mb-2 text-lg leading-relaxed text-gray-800">
-                  <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
-                    <i>
-                      2017 – 2020 <br>
-                    </i>
-                  </p>
-                  BSc Computer Science (2:1) <br>
-                  <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
-                    <i>
-                      2015 – 2017 <br>
-                    </i>
-                  </p>
-                  Level 3 National Diploma in Information Technology (D*D*D) <br>
-                  <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
-                    <i>
-                      2013 – 2014 <br>
-                    </i>
-                  </p>
-                  NVQ Diploma in Performing Engineering Operations with Engineering Practices (Pass) <br>
-                  City & Guilds Diploma in Electrical Installations; Buildings and Structures (Pass) <br>
-                  <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
-                    <i>
-                      2013 <br>
-                    </i>
-                  </p>
-                  8 GCSEs (Including English and Mathematics) <br>
-                  </p>
-                </div>
-                <div class="mt-10 py-10 border-t border-gray-300 text-center">
+            <div class="mt-7 py-5 border-t border-gray-300 text-center">
                   <div class="flex flex-wrap justify-center">
                     <div class="w-full lg:w-9/12 px-4">
                       <h1 class="text-3xl font-semibold leading-normal mb-2 text-gray-800 mb-2">
@@ -143,9 +109,42 @@
                       <p class="mb-2 text-lg leading-relaxed text-gray-800">
                         <i>
                           <p class="text-lg font-bold">
+                            Software Developer, Digital Secure Services LTD <br>
+                          </p>
+                        </i>
+                        </p>
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        <i>
+                          07/2021 - Present <br>
+                        </i>
+                      </p>
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                      <p class="leading-relaxed mb-2">
+                        I worked as a full stack developer using .Net, Javascript and MSSQL in order to complete roughly 200
+                        tickets during my tenure. I actively participated in team discussions about the direction of the project
+                        and weighed in on the implementation of certain features and epics in upcoming releases. 
+                        
+                        <p class="leading-relaxed mb-2">Employed the use of version control and tools like docker in order to manage the project. Actively participated in
+                          the use of Pluralsight where I completed multiple courses in order to broaden my skill set, some of
+                          which has been highlighted in my additional contributions. <br></p>
+                      </p>
+                      <p class="leading-relaxed mb-2">
+                        Recognised as having a good sense of defensive programming and SOLID principles. knowledgeable
+                        when managing prioritisation and ticket management including requirements gathering, which
+                        includes great communication skills that allow me to speak to colleagues of all technical levels in
+                        order to get information. Here I also gained experience of unit testing through FakeIt and Nunit.
+
+                        <p class="leading-relaxed mb-4">On top of that I helped out during a busy patch with Automation testing using Cypress where I also set up
+                          automated Pipelines on Gitlab to run nightly. <br></p>
+                      </p>
+                      </p>
+                      <p class="mb-2 text-lg leading-relaxed text-gray-800">
+                        <i>
+                          <p class="text-lg font-bold">
                             Technical Support Analyst, Alcumus <br>
                           </p>
                         </i>
+                      </p>
                       <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
                         <i>
                           12/2020 - 07/2021 <br>
@@ -162,12 +161,14 @@
                         From here initiated steps to change the way the new starter process was conducted and managed.
                         These changes helped increase the teams speed and management of new users. <br>
                       </p>
+                      </p>
                       <p class="mb-2 text-lg leading-relaxed text-gray-800 pt-6">
                         <i>
                           <p class="text-lg font-bold">
                             Course Representative for Final Year Students, University of South Wales <br>
                           </p>
                         </i>
+                        </p>
                       <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
                         <i>
                           09/2019 – 06/2020 <br>
@@ -193,6 +194,7 @@
                             ICT Technician, JPS Technical Services LTD <br>
                           </p>
                         </i>
+                      </p>
                       <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
                         <i>
                           12/2020 - 07/2021 <br>
@@ -211,38 +213,62 @@
                       </p>
                       <p class="mb-2 text-lg leading-relaxed text-gray-800 pt-6">
                         <i>
-                          <p class="text-lg font-bold">
-                            Additional Contributions <br>
+                          <p class="text-lg font-bold ">
+                            <u>Additional Contributions <br></u>
                           </p>
                         </i>
+                        </p>
                       <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
-                      <p class="leading-relaxed">
                       <p class="mb-2 text-lg leading-relaxed text-gray-800">
                         <i>
                           <p class="text-lg font-bold">
-                            ICT Technician, JPS Technical Services LTD <br>
+                            University Peer Assistance Leader <br>
                           </p>
                         </i>
-                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
-                        <i>
-                          12/2020 - 07/2021 <br>
-                        </i>
-                      </p>
-                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        </p>
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800 ">
                       <p class="leading-relaxed">
-                        Worked with JPS Technical Services as required by the company. Volunteered to help if an extra
-                        team member was necessary to complete a large assignment.
-                        Whilst working for JPS, provided general IT support and administration, such as setting up and
-                        configuring desktop computers for new offices and companies.
-                        Most jobs required running and installing category 5/6 cabling through office buildings into
-                        their
-                        corresponding servers. <br>
+                        Achieved a PASS Award (Peer Assisted Support Session Leader) For assisting first year students
+                        with extracurricular sessions helping them with their C++ project work.
                       </p>
-                      </p> <br>
                       </p>
                       </p>
                     </div>
                   </div>
+                  <div class="mt-8 py-5 border-t border-gray-300 text-center">
+                  <h3 class="text-3xl font-semibold leading-normal mb-2 text-gray-800 mb-2">
+                    Qualifications
+                  </h3>
+                  <div class="flex flex-wrap justify-center">
+                    <div class="w-full lg:w-9/12 px-4">
+                      <p class="mb-2 text-lg leading-relaxed text-gray-800">
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        <i>
+                          2017 – 2020 <br>
+                        </i>
+                      </p>
+                      BSc Computer Science (2:1) <br>
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        <i>
+                          2015 – 2017 <br>
+                        </i>
+                      </p>
+                      Level 3 National Diploma in Information Technology (D*D*D) <br>
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        <i>
+                          2013 – 2014 <br>
+                        </i>
+                      </p>
+                      NVQ Diploma in Performing Engineering Operations with Engineering Practices (Pass) <br>
+                      City & Guilds Diploma in Electrical Installations; Buildings and Structures (Pass) <br>
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        <i>
+                          2013 <br>
+                        </i>
+                      </p>
+                      8 GCSEs (Including English and Mathematics) <br>
+                      </p>
+                    </div>
                 </div>
               </div>
             </div>
